syntax="proto3";

package analytics;

option go_package="internal/analytics/pb";

service Analytics {
    rpc GetCharts(Params) returns (Report) {};
    rpc GetDescriptionStream(Params) returns (stream Report) {};
};

message Params {
    int64 query_id = 1;
    string start_date = 2;
    string end_date = 3;
    string prompt = 4;
};

message Report {
    string source = 1;
    string filename = 2;
    string description = 3;
    repeated Chart charts = 4;
    repeated Multiplier multipliers = 5;
};

message Chart {
    string title = 1;
    ChartType type = 2;
    string description = 3;
    repeated Record records = 4;
};

enum ChartType {
    UNDEFINED = 0;
    BAR_CHART = 1;
    PIE_CHART = 2;
};

message Multiplier {
    string key = 1;
    double value = 2;
};

message Record {
    string x = 1;
    double y = 2;
};